[package]
name = "aoc2020"
version = "0.1.0"
authors = ["KaranGauswami <karangauswami.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"

[[bin]]
name = "d1"
path = "src/day1.rs"

[[bin]]
name = "d2"
path = "src/day2.rs"

[[bin]]
name = "d3"
path = "src/day3.rs"
